2003-08-11  Ettore Perazzoli  <ettore@ximian.com>

	* e-source-group.c: New file.
	* e-source-group.h: New file.
	* e-source-list.h: New file.
	* e-source-list.c: New file.
	* e-source.c: New file.
	* e-source.h: New file.
	* test-source-list.c: New file to test the above.

2003-08-05  Dan Winship  <danw@ximian.com>

	* e-html-utils.c (special_chars): add a flag for non-url chars
	(controls, whitespace, ", and |)
	(url_extract): Use that. When urlifying just a hostname, make sure
	it really is a hostname, and not just something like "www.c".
	(e_text_to_html_full): Deal with url_extract returning NULL in the
	"www." case
	(main): add a regression test, #ifdef E_HTML_UTILS_TEST

2003-07-24  Rodrigo Moya <rodrigo@ximian.com>

	* e-config-listener.c (add_key): just preload one level of GConf keys,
	since preloading all makes the calendar startup slow.

2003-07-23  Dan Winship  <danw@ximian.com>

	* Makefile.am: Use EVO_MARSHAL_RULE

	* e-component-listener.c (connection_listen_cb): Fix a non-ANSI
	switch label.

	* e-gui-utils.c: only include "art/empty.xpm" if
	HAVE_LIBGNOMEUI_GNOME_ICON_LOOKUP_H isn't defined

	* e-xml-hash-utils.c (e_xml_to_hash): Deconstify a non-const
	variable to fix a warning.

2003-07-03  JP Rosevear  <jpr@ximian.com>
 
 	* e-xml-hash-utils.c (foreach_save_func): encode the text
 	(e_xml_from_hash): pass xmlDoc to foreach method
 	(e_xmlhash_new): check for file existence
 	(e_xmlhash_destroy): only destroy the hash if it exists
	
2003-07-01  Dan Winship  <danw@ximian.com>

	* e-gui-utils.c (e_icon_for_mime_type): New function to return an
	icon for a MIME type, using GnomeIconTheme if available or
	gnome-vfs and gnome-mime-data if not.

2003-06-19  Dan Winship  <danw@ximian.com>

	* e-xml-hash-utils.c (e_xml_to_hash): don't leak an extra copy of
	the values

2003-06-14  Larry Ewing  <lewing@ximian.com>

	* e-name-western.c (e_name_western_get_suffix_at_str_end): free
	word before breaking out of the loop.
